--- a/index.html
+++ b/index.html
@@ -2,11 +2,44 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
-    <title>Fork Me! FCC: Test Suite Template</title>
+    <title>Lisandro-Subrat</title>
     <link rel="stylesheet" href="css/style.css">
   </head>
 
   <body>
+<div id="container">
+<div id="header">
+<h1>survey</h1>
+<p id="description">Thanks for filling the survey!</p>
+</div>
+
+<form id="survey-form">
+  <div>
+    <label id="name-label">Name:</label>
+    <input type="text" placeholder="Enter your name"  name="name" id="name"  required>
+  </div>
+  <div>
+    <label id="email-label">Email:</label>
+    <input type="email" placeholder="Enter your email"  name="email" id="email"  required>
+  </div>
+  <div>
+    <label id="number-label">Name:</label>
+    <input type="number" placeholder="Enter your age"  name="age" id="number" min="10" max="100" required>
+  </div>
+</form>
+
+
+</div>
+
+
+
+
+
+
+
+
+
+
 
 
     <!--    <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
