--- a/index.html
+++ b/index.html
@@ -26,6 +26,34 @@
     <label id="number-label">Name:</label>
     <input type="number" placeholder="Enter your age"  name="age" id="number" min="10" max="100" required>
   </div>
+  <div>
+    <label for="cars">Dropdown options:</label>
+    <select name="cars" id="cars">
+      <option disabled="" selected="" value="">Select an option</option>
+      <option value="option1">Option 1</option>
+      <option value="option2">Option 2</option>
+      <option value="option3">Option 3</option>
+      <option value="option4">Option 4</option>
+    </select>  
+  </div>  
+  <div>
+    <p>Radio Options :</p>
+    <input type="radio" id="age1" name="age" value="30">
+    <label for="option1">option 1</label><br>
+    <input type="radio" id="age2" name="age" value="60">
+    <label for="option2">option 2</label><br>  
+    <input type="radio" id="age3" name="age" value="100">
+    <label for="option3">option 3</label><br><br>
+  </div>  
+  <div>
+    <p>Check Boxes</p>
+    <input type="checkbox" id="checkbox1" name="checkbox1" value="checkbox1">
+    <label for="checkbox1"> checkbox 1</label><br>
+    <input type="checkbox" id="checkbox2" name="checkbox2" value="checkbox2">
+    <label for="checkbox2"> checkbox 2</label><br>
+    <input type="checkbox" id="vehicle3" name="checkbox3" value="checkbox3">
+    <label for="checkbox3"> checkbox 3</label><br><br>    
+  </div>
 </form>
 
 
